2.2.9

 *) Don't invoke suexec when the user/group for the fastcgi application
    is the same as the apache main server.  This is consistent with 
    apache's suexec handling.  Suggested by Nikolaus Rath [Nikolaus@rath.org].

 *) Reset the apache drop dead timer upon successful read or writes
    to/from the client.  This eliminates timeouts that were occuring
    during the large file transfers to/from slow clients.

 *) Support generic wrappers such as cgiwrap by eliminating dependencies
    on Apache's SUEXEC, renaming the FastCgiSuexec directive 
    FastCgiWrapper and eliminating any checks regarding the target 
    application (this is the repsonibility of the wrapper).

 *) Fix a nasty bug that occurred when a client aborted a request 
    before the connection to a dynamic FastCGI application was opened.
    The application's lock file descriptor wasn't setup but was being 
    closed which resulted in FD0 being closed.  Normally this open to 
    /dev/null and should pose no problems except that because the FD
    was available it was being returned by Apache's accept().  This 
    caused it to be registered for pool cleanup.  mod_cgi though moves
    the CGI stdin pipe to FD0 and thus it was getting waxed during pool
    cleanup.  Problem identified by checksum@163.net.

Changes with mod_fastcgi 2.2.8

 *) Eliminate the concept of disabled applications.  If a failure 
    occurs trying to setup an application (e.g. bind() error) its 
    tried repeatedly every init-start-delay seconds.

 *) Tweak to Makefile.tmpl to support DSOs.  Dave Hill [ddhill@zk3.dec.com]

Changes with mod_fastcgi 2.2.6

 *) Shutdown the PM when Apache appears to have disappeared.

 *) seteuid() tweak for HP-UX 11.  Milton L. Hankins [mlh@swl.msd.ray.com]

 *) (Win32) More dynamic fixes.

 *) (Win32) Eliminate the per application named pipe mutex.  Its now 
    per process to keep the lib happy (the use _FCGI_MUTEX_ should